--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,12 @@
 name: Java CI
 
-on: [push]
+on:
+ push:
+   branches:
+     - master
+ workflow_dispatch:
+   branches:
+     - main
 
 jobs:
   build:
